<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notifications">

    <fragment
        android:id="@+id/navigation_user"
        android:name="edu.rosehulman.moviequotes.ui.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_user_edit"
        android:name="edu.rosehulman.moviequotes.ui.UserEditFragment"
        android:label="@string/title_quotes"
        tools:layout="@layout/fragment_user_edit" />

    <fragment
        android:id="@+id/navigation_quotes"
        android:name="edu.rosehulman.moviequotes.ui.QuotesListFragment"
        android:label="@string/title_quotes"
        tools:layout="@layout/fragment_quotes_list" />

    <fragment
        android:id="@+id/navigation_quote_edit"
        android:name="edu.rosehulman.moviequotes.ui.QuoteEditFragment"
        android:label="@string/title_quotes"
        tools:layout="@layout/fragment_quote_edit" />

    <fragment
        android:id="@+id/navigation_quotes_detail"
        android:name="edu.rosehulman.moviequotes.ui.QuotesDetailFragment"
        android:label="Quotes"
        tools:layout="@layout/fragment_quotes_detail" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="edu.rosehulman.moviequotes.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />


</navigation>